# DeskQM

./: README.md  pyproject.toml
examples/: config.linux.json  config.windows.json  methanol.xyz  selfcheck.linux.sh  selfcheck.windows.ps1
runs/ir_20260712_122323_methanol/commands/: gaussian_command.ps1  gaussian_command.sh  gaussian_command.txt
runs/ir_20260712_122323_methanol/inputs/: job.gjf
runs/ir_20260712_122323_methanol/results/: run_metadata.json
runs/nearir_20260712_122325_methanol/commands/: orca_attempt_01.ps1  orca_attempt_01.sh  orca_attempt_01.txt
runs/nearir_20260712_122325_methanol/results/: run_metadata.json
runs/nmr_20260712_122322_methanol/commands/: orca_attempt_01.ps1  orca_attempt_01.sh  orca_attempt_01.txt
runs/nmr_20260712_122322_methanol/results/: run_metadata.json
runs/uvvis_20260712_122321_methanol/commands/: gaussian_command.ps1  gaussian_command.sh  gaussian_command.txt
runs/uvvis_20260712_122321_methanol/inputs/: job.gjf
runs/uvvis_20260712_122321_methanol/results/: run_metadata.json
runs/vcd_20260712_122324_methanol/commands/: orca_attempt_01.ps1  orca_attempt_01.sh  (+1 more)
scripts/: batch_opt.py  batch_sp.py  conformer_screen.py  crest_screen.py  ecd.py  frequency.py  inspect_runs.py  ir.py  irc.py  nearir.py  neb.py  nmr.py  optimize.py  postprocess_results.py  raman.py  scan.py  single_point.py  summarize_runs.py  ts_retry.py  uvvis.py  vcd.py
src/qm_automation/: __init__.py  cli.py  cli_shared.py  config.py  engines.py  io.py  models.py  parsing.py  presets.py  reporting.py  templates.py  workflows.py  workspace.py
(+5 files in other folders)
