[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qm-automation"
version = "0.1.0"
description = "Command-line automation workflows for ORCA, Gaussian, xTB, and CREST"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "GitHub Copilot" }
]
dependencies = []

[project.scripts]
qm-auto = "qm_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]